--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+#main-section{
+	border: 1px ;
+	height: 600px;
+	width:400px;
+	background-color: whitesmoke;
+	box-shadow: 1px 1px 5px 5px gray ;
+	line-height: 40px;
+	border-radius: 5px;
+}
+#main-section>img{
+	width:280px;
+	padding-top: 40px;
+}
+#main-section>p{
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: 30px;
+	line-height: 30px;
+}
+#main-section>h1{
+	font-size: 40px;
+}
+#main-section>button{
+	padding:10px;
+    background-color: orangered;
+	color: white;
+	border-style: none;
+	border-radius: 10px;
+	height: 50px;
+	width: 100px;
+	font-size: 15px;
+}
